
The Modding sections are mostly of interest to Python modders merging BUG into their own mods.

Note: Changes marked [BULL] only take effect when the optional BUG DLL is installed.
      BULL features that don't require BUG are not listed here.


____________________________________________________________________________________________________
BUG x.x unreleased

CHANGES

New Features:

Improvements:

- Production Queue
	Items that have hammers invested already are drawn in cyan (projects only work with BULL)
- Customizable Domestic Advisor
	Added Draft Anger column
- Great Person Tech Prefs
	Added headings and limited Current and Future techs to those that can be researched
- Unit Naming
	Can use multiple counters for a single naming code
- Civ4lerts
	Worst Enemy alerts show the old enemy along with the new one
- BUG Button
	Added option to hide the button and moved it slightly left
- Translations
	Added several improved Spanish translations by Gerard
- BUG Unit Plot Lists ... uses the BUG team developed 'draw' code - newly developed so it might be a little unstable but does promise greatly enhanced performance (ie speed) when dealing with large stacks

Bug Fixes:

- Random Events
	Fixed culture-level checking in Partisans random event; event is now possible on 3.19 and above
- Unit Naming
	Civilization name code uses adjective as described in hover help as opposed to noun form (English vs. England)
- Worst Enemy
	Fixed check in games with multiple players on a team
	Alert ignores human teams instead of AIs
- Civ4lerts
	City-related, Worst Enemy, and Refuses to Talk alerts work for each player in Hot Seat games
	Worst Enemy and Refuses to Talk alerts work with AI AutoPlay
	Worst Enemy alert not shown when team is killed (was showing no-name team)
- Combat Log
	Actual owner of hidden nationality units is not exposed
- Options Screen
	Fixed options that were not being saved and/or could only turn off


MODDING
